# usaco_c

./: CMakeLists.txt  README.md  usaco
ariprog/: .ariprog.c.swp  ariprog  ariprog.c
barn1/: barn1  barn1.c
beads/: beads  beads.c  beads2  beads2.c
combo/: combo  combo.c
crypt1/: crypt1  crypt1.c
dualpal/: dualpal  dualpal.c
friday/: friday  friday.c
gift1/: gift1  gift1.c  gift1.in2
milk/: milk  milk.c
milk2/: milk2  milk2.c  milk_bit.c
milk3/: milk3  milk3.c
namenum/: namenum  namenum.c
palsquare/: palsquare  palsquare.c
ride/: ride.c  ride.cpp  ride_c  ride_iterative.cpp  ride_iterative_fn.cpp  ride_iterators_fn.cpp  ride_recursive_fn.cpp
skidesign/: skidesign  skidesign.c
tests/: main.c  main.cpp  test.cpp  test_2darr_ptrs.c
transform/: transform  transform.c  transform.in
wormhole/: .wormhole.c.swp  .wormhole.in.swp  wormhole  wormhole.c  wormhole.dbg.c  wormhole.in
